# pg_tviews

./: .clippy.toml  .gitignore  .phase4-ready  .pre-commit-config.yaml  .prek.yaml  ARCHITECTURE.md  BUG_REPORT_PHASE_3_4.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DOCKER_CORRECTED_SETUP.md  DOCKER_QUICKSTART.md  DOCKER_SETUP_SUMMARY.md  DOCUMENTATION_GAPS.md  Dockerfile.benchmarks  Dockerfile.build  IMPLEMENTATION_PLAN_SUMMARY.md  MEMORY_PROFILING_REPORT.md  PERFORMANCE_VALIDATION.md  PHASE_4_COMPLETE_SETUP.txt  PHASE_4_PLAN.md  PHASE_4_READY.md  PHASE_4_SUMMARY.txt  PRD.md  PRD_multiupdate.md  PRD_v2.md  QUICK_START_PHASE4.md  README.md  RELEASE_NOTES.md  SECURITY-CHECKLIST.md  SECURITY.md  SESSION_SUMMARY.md  TODO_TODAY.md  architecture.md  debug_metadata.sql  pg_tviews.control  rebuild_and_test.sh  run_red_tests.sh  test.json  test_ddl_consistency.sql  (+7 more)
.cargo/: config.toml  config.toml.backup
.github/: dependabot.yml
.phases/: 20251213_TODO.md  20251214_BENCHMARK_FIXES_IMPLEMENTATION_PLAN.md  20251214_BENCHMARK_FIXES_IMPLEMENTATION_PLAN_v2.md  20251214_IMPLEMENTATION_PLAN_IMPROVEMENTS.md  20251214_PHASE3_E2E_VERIFICATION.md  20251214_PHASE3_FINDINGS.md  20251214_TODO.md  CICD_FIX_README.md  CLIPPY_FIX_PLAN.md  EXCELLENCE_ROADMAP.md  INDEX.txt  PHASE6_COMPLETION.md  PHASE6_IMPROVEMENTS_SUMMARY.md  PHASE6_QUICKREF.md  PHASE_A_IMPLEMENTATION.md  PROJECT_QA_ASSESSMENT_REPORT.md  PROJECT_QA_COMPREHENSIVE.md  QUICK_START.md  README.md  README_QA.md  ROADMAP.md  TRINITY_PATTERN_CLARIFICATIONS.md  comprehensive-benchmarks-phase2-IMPLEMENTATION.md  comprehensive-benchmarks-phase2.md  docs_cleanup.md  event-triggers-implementation-plan.md  fix-process-utility-hook-DIAGNOSIS.md  fix-process-utility-hook-INDEX.md  fix-process-utility-hook-QUICKSTART.md  fix-process-utility-hook-SUMMARY.md  fix-process-utility-hook-implementation.md  fix-process-utility-hook.md  phase-10-overview.md  phase-5-jsonb-ivm-integration.md  phase-5-task-1-dependency-setup.md  phase-5-task-2-metadata-enhancement.md  phase-5-task-3-dependency-detection.md  phase-5-task-4-smart-patching.md  phase-5-task-5-performance-benchmarking.md  phase-5-task-6-remediation.md  (+13 more)
docker/: README.md  bench.sh  benchmark-entrypoint.sh  build-and-run.sh  docker-compose.yml  dockerfile-benchmarks  run-benchmarks-docker.sh
docs/: API_REFERENCE.md  ARRAYS.md  BENCHMARKING_WITH_JSONB_IVM.md  BREAKING_CHANGES_V2.0.md  CONCURRENCY.md  DDL_REFERENCE.md  DEBUGGING.md  DEPRECATION_WARNINGS.md  DOCKER_BENCHMARKS.md  DOCKER_FIX_SUMMARY.md  MONITORING.md  (+20 more)
(+414 files in other folders)
