[package]
name = "pg_tviews"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pgrx_embed_pg_tviews"
path = "./src/bin/pgrx_embed.rs"

[dependencies]
pgrx = "=0.12.8"
pgrx-macros = "=0.12.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
once_cell = "1.19"
bincode = "1.3"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pgrx-tests = "=0.12.8"

[features]
default = ["pg17"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

