[package]
name = "pg_tviews"
version = "0.1.0-beta.5"
edition = "2021"
authors = ["Lionel Hamayon <lionel.hamayon@evolution-digitale.fr>"]
description = "Transactional materialized views with incremental refresh for PostgreSQL"
license = "MIT"
repository = "https://github.com/fraiseql/pg_tviews"
homepage = "https://github.com/fraiseql/pg_tviews"
documentation = "https://github.com/fraiseql/pg_tviews"
keywords = ["postgresql", "materialized-views", "incremental-refresh", "database", "pgrx"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_tviews"
path = "./src/bin/pgrx_embed.rs"

[dependencies]
pgrx = "=0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
bincode = "1.3"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[profile.dev]
panic = "unwind"

 [profile.release]
 panic = "unwind"
 opt-level = 3
 lto = "fat"
 codegen-units = 1

 [lints.clippy]
 all = { level = "deny", priority = -1 }
 # Disable specific lints that conflict with PostgreSQL FFI
 missing_errors_doc = "allow"  # FFI functions often can't document all Postgres errors
 module_name_repetitions = "allow"  # pg_tviews_ prefix is intentional

